Changed figure placements.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.57 2009/11/05 19:34:28 ith Exp $
+% $Id: dbi-intro.tex,v 1.58 2009/11/20 15:53:37 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.57 2009/11/05 19:34:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.58 2009/11/20 15:53:37 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -471,7 +471,7 @@ in the UV limit ($\rho \rightarrow \infty$). This has
 a volume $\mathrm{Vol} (T^{1,1}) = 16\pi^3/27$ and  topology
 $S^2\times S^3$, where the $S^2$ is fibred over the $S^3$.
 
-\begin{figure}
+\begin{figure}[htbp]
 \centering
 \includegraphics{dbi/graphs/deformed-conifold}   
 \caption[Deformed Conifold]{A conifold can be deformed to remove the singularity at
@@ -533,7 +533,7 @@ Since the radial distance is an open string mode, the field
 equation for the inflaton is determined by a DBI action.
 
 % 
-\begin{figure}
+\begin{figure}[htbp]
  \centering
  \includegraphics[width=\textwidth]{dbi/graphs/cymanifold}
  \caption[Calabi-Yau Manifold]{A representation of the Calabi-Yau manifold in the 6
