--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.64 2009/11/20 15:33:25 ith Exp $
+% $Id: dbi.tex,v 1.65 2009/11/20 15:53:37 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.64 2009/11/20 15:33:25 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.65 2009/11/20 15:53:37 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -126,7 +126,7 @@ where $h (\rho_{UV})$ is of order unity). The geometry of the throat is shown
 in Figure~\ref{fig:throat-geom}.
 
 % 
-\begin{figure}
+\begin{figure}[htbp]
  \centering
  \includegraphics[width=\textwidth]{./dbi/graphs/throat-geom.pdf}
  % throat-geom.pdf: 432x288 pixel, 72dpi, 15.24x10.16 cm, bb=0 0 432 288
@@ -955,7 +955,7 @@ next chapter.
 \label{sec:others-dbi}
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\begin{figure}[htb]
+\begin{figure}[htbp]
  \centering
  \includegraphics[width=0.8\textwidth]{./dbi/graphs/dbi-review.pdf}
  % dbi-review.pdf: 498x327 pixel, 72dpi, 17.57x11.54 cm, bb=0 0 498 327
