--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.60 2009/11/19 18:55:58 ith Exp $
+% $Id: mainintro.tex,v 1.61 2009/11/20 15:53:36 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.60 2009/11/19 18:55:58 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.61 2009/11/20 15:53:36 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -414,7 +414,7 @@ previously have been inside the horizon.
 Observations require that inflation lasted at least long enough that all the
 scales we measure today were previously inside the horizon. 
 % 
-\begin{figure}
+\begin{figure}[htbp]
  \includegraphics[width=\textwidth]{graphs/scales.pdf}
  \caption[Comoving scales and the Hubble radius]{Comoving scales that have recently
 entered the horizon would
