Changed to using align instead of eqnarray

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.58 2009/11/20 15:53:37 ith Exp $
+% $Id: dbi-intro.tex,v 1.59 2009/11/20 16:08:14 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.58 2009/11/20 15:53:37 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.59 2009/11/20 16:08:14 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -485,11 +485,11 @@ circle extended in the direction of the throat radius. The three-form fluxes
 $F_3$ and $H_3$, aligned with these cycles, are turned on to make the warped
 throat a solution of the Einstein equations \cite{cline}. The cycles are threaded with
 quantized units of flux $M$ and $K$ given by: 
-\begin{eqnarray}
+\begin{align}
 \label{eq:fluxdefn-dbiintro}
- \frac{1}{2\pi\alpha'}\int_A F_3 &=& M \,, \\
- \frac{1}{2\pi\alpha'}\int_B H_3 &=& -K\,, 
-\end{eqnarray}
+ \frac{1}{2\pi\alpha'}\int_A F_3 &= M \,, \\
+ \frac{1}{2\pi\alpha'}\int_B H_3 &= -K\,, 
+\end{align}
 where $M,K\in \mathbb{Z}$.
 The D$3$ charge of the throat, $N$, is related to the quantized fluxes by
 $N=MK$.
@@ -651,18 +651,18 @@ $\{ \varepsilon_H, |\eta_H | , |s | \}  \ll 1$ apply during observable inflation
 In this regime, the amplitudes and spectral indices of the two-point functions 
 for the scalar and tensor perturbations are given by \cite{gm}
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:spectra-dbiintro}
-\Pr= \frac{H^4}{4\pi^2\dot{\varphi}^2} =\frac{1}{8 \pi^2 \Mpl^2}
+\Pr &= \frac{H^4}{4\pi^2\dot{\varphi}^2} =\frac{1}{8 \pi^2 \Mpl^2}
 \frac{H^2}{c_s \varepsilon_H}\,,
 \\
-\Pt = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2} \,,
+\Pt &= \frac{2}{\pi^2} \frac{H^2}{\Mpl^2} \,,
 \\
 \label{indices}
-1-n_s = 4 \varepsilon_H -2\eta_H  +2s \,,
+1-n_s &= 4 \varepsilon_H -2\eta_H  +2s \,,
 \\
- n_t = -2\varepsilon_H  \,,
-\end{eqnarray}
+ n_t &= -2\varepsilon_H  \,,
+\end{align}
 % 
 respectively. $\Pt$ and $n_t$ are evaluated when $k=aH$ but $\Pr$ and $n_s$ are
 evaluated 
