--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.59 2009/11/20 15:33:25 ith Exp $
+% $Id: multibrane.tex,v 1.60 2009/11/20 16:08:14 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.59 2009/11/20 15:33:25 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.60 2009/11/20 16:08:14 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -306,27 +306,27 @@ $l=1/2, \alpha = 2$ (or $s=-1$ in the exact case following a redefinition of
 $f_i$). 
 More generally, however, \eq{eq:gensoln-multi} implies that  
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:consequence-multi}
-c_sP_{,X} \simeq \frac{l f_1 f_2}{\sqrt{2(1-l)}} \left( 
+c_sP_{,X} &\simeq \frac{l f_1 f_2}{\sqrt{2(1-l)}} \left( 
 1- f_2X \right)^{(2l-1)/2} \,,
 \\
-c_s^2 \simeq \frac{1-f_2X}{2(1-l)} \,,
-\end{eqnarray}
+c_s^2 &\simeq \frac{1-f_2X}{2(1-l)} \,,
+\end{align}
 % 
 when $X \simeq 1/f_2$. Self-consistency therefore
 requires $l<1$. Moreover
 we find from \eq{eq:fnldefn-dbiintro} that
 %  
-\begin{eqnarray}
+\begin{align}
 \label{eq:consequence3-multi}
-\fnleq \simeq \frac{-\beta}{1-f_2X} , \qquad \beta \equiv \frac{5(59-55l)}{486}
+\fnleq &\simeq \frac{-\beta}{1-f_2X}\,, & \beta &\equiv \frac{5(59-55l)}{486}
 \,,
 \\
 \label{eq:consequence4-multi}
-\fnleq \simeq -\frac{\sigma}{c_s^2}, \qquad \sigma \equiv 
+\fnleq &\simeq -\frac{\sigma}{c_s^2}\,, & \sigma &\equiv 
 \frac{5}{972} \left( \frac{59-55l}{1-l} \right) \,.
-\end{eqnarray}
+\end{align}
 % 
 Hence substituting Eqs.~\eqref{eq:consequence-multi} and
 \eqref{eq:consequence3-multi} 
@@ -478,15 +478,15 @@ using highest weight methods and chord diagrams.
 The result is that the $STr$ acts on different spin representations of $SU(2)$ 
 in the following manner:
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:str-even-multi}
-STr (\alpha^i \alpha^i)^q &=& 2(2q+1)\sum_{i=1}^{n/2}(2i-1)^{2q} , 
-\qquad n\; \mathrm{ even}\,, 
+STr (\alpha^i \alpha^i)^q &= 2(2q+1)\sum_{i=1}^{n/2}(2i-1)^{2q} , 
+&& n\; \mathrm{ even}\,, 
 \\
 \label{eq:str-odd-multi}
-STr (\alpha^i \alpha^i)^q &=& 2(2q+1)\sum_{i=1}^{(n-1)/2} (2i)^{2q} , 
-\qquad n\; \mathrm{ odd}\,.
-\end{eqnarray}
+STr (\alpha^i \alpha^i)^q &= 2(2q+1)\sum_{i=1}^{(n-1)/2} (2i)^{2q} , 
+&& n\; \mathrm{ odd}\,.
+\end{align}
 % 
 
 
